--- a/styles/style.css
+++ b/styles/style.css
@@ -285,7 +285,7 @@ a:hover {
 }
 
 .button:hover {
-    background-color: #E2EAF2;
+    background-color: #ead6f5;
     transition: background-color 0.25s ease;
 }
 
