--- a/styles/style.css
+++ b/styles/style.css
@@ -229,7 +229,7 @@ a:hover {
     display: flex;
     flex-direction: column;
     border-radius: 20px;
-    background-color: white;
+    background-color: rgb(238, 197, 248);
     margin: 20px 0;
 }
 
