--- a/styles/style.css
+++ b/styles/style.css
@@ -229,7 +229,7 @@ a:hover {
     display: flex;
     flex-direction: column;
     border-radius: 20px;
-    background-color: rgb(244, 229, 248);
+    background-color: rgb(240,230,249);
     margin: 20px 0;
 }
 
